--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
     font-family: 'Space Mono', monospace;
 }
 
-.grid-container {
+.enemy_row {
     display: grid;
     grid-template-columns: 19% 19% 19% 19% 19%;
     background-color: gray;
